feat: add public knowledge base routes and templates